fix (#15): resolve problems with bad contrast in geosuggest items

--- a/src/components/Geosuggest/style.scss
+++ b/src/components/Geosuggest/style.scss
@@ -39,7 +39,7 @@
   max-height: 25em;
   padding: 0;
   margin-top: -1px;
-  background: $gray-light;
+  background: $gray-lighter;
   border: 2px solid $brand-primary;
   border-top-width: 0;
   overflow-x: hidden;
@@ -58,23 +58,25 @@
 /**
  * A geosuggest item
  */
-.geosuggest-item {
+.geosuggest__item {
+  color: $gray-darker;
   font-size: 2rem;
   padding: .5em .65em;
   cursor: pointer;
 }
 
-.geosuggest-item:hover,
-.geosuggest-item:focus {
+.geosuggest__item:hover,
+.geosuggest__item:focus {
   background: #f5f5f5;
 }
 
-.geosuggest-item--active {
+.geosuggest__item--active {
   background: $brand-primary;
-  color: $gray-light;
+  color: $gray-lighter;
 }
 
-.geosuggest-item--active:hover,
-.geosuggest-item--active:focus {
-  background: #ccc;
+.geosuggest__item--active:hover,
+.geosuggest__item--active:focus {
+  color: $gray-darker;
+  background: #f5f5f5;
 }
